refactor: 구글 스타일 포메터 적용